# Game-A

./: Cargo.toml  Cross.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
Error-Reboot/: Cargo.toml
Error-Reboot/src/: main.rs
docs/: index.md
game/: Cargo.toml  build.rs
game/src/: component.rs  lib.rs  main.rs  main_loop.rs  object.rs  render.rs  scene.rs  transform.rs  type_render.rs  utils.rs  world.rs
game/src/main_loop/: event_loop.rs
game/src/object/: objects.rs
game/src/render/: wgpu.rs
game/src/scene/: scenes.rs
marco/: Cargo.toml
marco/src/: lib.rs
