[package]
name = "game"
version.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true

[features]
android-game-activity = ["winit/android-game-activity"]
android-native-activity = ["winit/android-native-activity"]
wgpu-dx12 = ["wgpu/dx12"]
wgpu-metal = ["wgpu/metal"]
wgpu-vulkan = ["wgpu/vulkan"]
serde = ["dep:serde", "log/serde", "winit/serde", "wgpu/serde"]

[dependencies]
log = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std", "unstable"], optional = true }
winit = { version = "0.30", default-features = false, features = ["x11", "wayland", "rwh_06"] }
wgpu = { version = "*", default-features = false, features = [] }
tokio = { version = "*", default-features = false, features = ["full"] }
env_logger = { version = "*", default-features = false, features = ["auto-color", "color", "humantime"] }
rodio = { version = "*", default-features = true, features = ["mp3"] }
dyn-clone = { version = "*", default-features = false, features = [] }
chrono = { version = "*", default-features = false, features = [] }
marco.workspace = true