[package]
name = "marco"
version.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
log = { version = "*" }
env_logger = { version = "*", default-features = false, features = ["auto-color", "color", "humantime"] }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"